reformat structure, delete unnecessary directory, fixed wrong encoding in DB